adds function to iterate through computer array one at a time

--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
         </div>
         
         <script src="scripts/main.js" async defer></script>
+        <script src="scripts/test.js" async defer></script>
+
     </body>
 </html>
