--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
         </div>
         <div class="game">
             <div class="row row1">
-                <div class="box box-1"></div>
-                <div class="box box-2"></div>
+                <div class="box green"></div>
+                <div class="box yellow"></div>
             </div>
             <div class="row row2">
-                <div class="box box-3"></div>
-                <div class="box box-4"></div>  
+                <div class="box red"></div>
+                <div class="box blue"></div>  
             </div>   
         </div>
         
         <script src="scripts/main.js" async defer></script>
         <script src="scripts/test.js" async defer></script>
+        <script src="scripts/deletedCode.js" async defer></script>
 
     </body>
 </html>
