fully functioning game play

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <script src="scripts/main.js" async defer></script>
         <script src="scripts/test.js" async defer></script>
-        <script src="scripts/deletedCode.js" async defer></script>
+        <!-- <script src="scripts/deletedCode.js" async defer></script> -->
 
     </body>
 </html>
