adds full functionality. A little hacky though

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="turn">
             <div class ="computers-turn">Computers Turn...</div>
             <div class="your-turn">Your Turn</div>
+            <div class="game-over">Game Over!</div>
         </div>
         <div class="game">
             <div class="row row1">
