adds a front-end high score counter

--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
                 <div class="box blue"></div>  
             </div>   
         </div>
+
+        <audio class="root-note" src="sounds/root_01.R.wav"></audio>
+        <audio class="third-note" src="sounds/third_01.R.wav"></audio>
+        <audio class="fourth-note" src="sounds/fourth_01.L.wav"></audio>
+        <audio class="fifth-note" src="sounds/fifth_01.L.wav"></audio>
         
         <script src="scripts/main.js" async defer></script>
         <script src="scripts/test.js" async defer></script>
         <!-- <script src="scripts/deletedCode.js" async defer></script> -->
-
+        <div class="score">
+            High Score: <span class="score-text"></span>
+        </div>
     </body>
 </html>
