--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     </head>
     
     <body>
-        <h1>Scott Says...</h1>
-        <span class="start-game">Start Game!</span>
+        <h1 class="title">Scott Says...</h1>
+        <div class="game-over">Game Over!</div>
+        <span class="start-game">Start Game</span>
         <div class="turn">
             <div class ="computers-turn">Computers Turn...</div>
             <div class="your-turn">Your Turn</div>
-            <div class="game-over">Game Over!</div>
         </div>
         <div class="game">
             <div class="row row1">
