re-names badly named variables

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     
     <body>
-        <h1 class="title">Scott Says...</h1>
+        <h1 class="scott-says-text">Scott Says...</h1>
         <div class="game-over">Game Over!</div>
         <span class="start-game">Start Game</span>
         <div class="turn">
@@ -20,12 +20,12 @@
         </div>
         <div class="game">
             <div class="row row1">
-                <div class="box green"></div>
-                <div class="box yellow"></div>
+                <div class="quadrant green"></div>
+                <div class="quadrant yellow"></div>
             </div>
             <div class="row row2">
-                <div class="box red"></div>
-                <div class="box blue"></div>  
+                <div class="quadrant red"></div>
+                <div class="quadrant blue"></div>  
             </div>   
         </div>
 
